--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
   </head>
   <body>
-    <h2 class="text-center mt-4 mb-4 h2">Welcome to Larege Books Store</h2>
+    <h2 class="text-center mt-4 mb-4 h2">Welcome to Books Store</h2>
     <!-- book search area -->
     <div class="input-group mb-3 w-50 mx-auto">
       <input
